# advent_bot

./: alembic.ini  bot.py  pyproject.toml
app/database/: models.py  requests.py
app/handlers/: advent.py  main.py
app/keyboards/: main.py
app/texts/: main.py
app/utils/: advent_calendar.py  cache.py  functions.py  models.py
src/migrations/versions/: 4c7af5443e4b_.py  6ff8d69ed0f3_.py
